--- a/index.html
+++ b/index.html
@@ -17,25 +17,26 @@
  	</div>
 
  	<div class="card-white">
- 	<h2>My current studies</h2>
+ 	<h2>My studies</h2>
  	<ul class="para">
   		<li>Master in Management at HEC Paris</li>
-  		<li>Engeneering Masters at ENSAE</li>
+  		<li>Classe préparatoire in Lycée Louis Le Grand for 2 years, specialization in mathematics</li>
+		<li>Highschool Lycée Louis Le Grand for 3 years, specialization in mathematics and English</li>
 	</ul>
 	</div>
 
 	<div class="card-white">
- 	<h2>Associations I am a part of</h2>
+ 	<h2>My hobbies</h2>
  	<ul class="para">
- 		<li><em>AVi </em>: Avenir Vietnam is a humanitarian association that organizes each year a trip to Vietnam. Once in Vietnam, we help build orphanage, teach French, develop microcredit...</li>
- 		<li><em>HPR </em>: HEC Positive Reconstructuring in a consulting association specialized in Social and Solidarity economy.</li>
- 		<li><em></em>IS </em>: International Society is the HEC association in charge of international events and of the international students.</li>
- 		<li><em>Assauce </em>: Assauce is an association that gathers students who love to cook.</li>
+ 		<li><em>Cello </em>: I started playing the cello when I was five years old, and I keep practising it everyday. My favorite pieces are Bach number one suite and Breval's concerto number one.</li>
+ 		<li><em>Reading </em>: Whenever I have free time, I enjoy reading any books, but my favorites are the ones written by Albert Camus, such as "La Chute".</li>
+ 		<li><em></em>Cooking </em>: I love cooking during my free time, especially baking French pasteries. It's a challenge but an entertaining one !</li>
+ 		<li><em>Watching movies </em>: I really enjoy watching movies, whether it is with my family or with my friends. My favorite king of movies are thrillers.</li>
 	</ul>
 	</div>
 
  	<form>
- 		<h3>Don't hesitate to contact me</h3>
+ 		<h3>Don't hesitate to contact me if you have any question</h3>
  		<input type="email">
  		<input type="message">
  		<input type="submit" value="Send">
