--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  	<a href="https://fr.linkedin.com/in/lise-plisson-saun%C3%A9-14861b220" target="_blank">To learn more about me</a>
  	</div>
 
- 	<div margin: 80px; class="card-white">
+ 	<div class="card-white">
  	<h2>My studies</h2>
  	<ul class="para">
   		<li>Master in Management at HEC Paris</li>
