--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  	<div class="container">
  	<div id="card-1" class="card-white">
  	<h1>Hello, it's Lise !</h1>
- 	<img src="https://media-exp1.licdn.com/dms/image/C5603AQEct6niaC_MFg/profile-displayphoto-shrink_200_200/0/1631203814618?e=1641427200&v=beta&t=zmAg7kDgy17VnPrKy3sHP3D9v_XO46jqA70F01hIv94" alt="pdp Linkedin" id="img-circle">
+ 	<img src="https://cdn-icons-png.flaticon.com/512/126/126379.png" alt="pdp Linkedin" id="img-circle">
  	<p class="para">I am a student at HEC Paris, learnig how to code in HTML and CSS.</p>
  	<a href="https://fr.linkedin.com/in/lise-plisson-saun%C3%A9-14861b220" target="_blank">To learn more about me</a>
  	</div>
